# shared_string

./: .gitignore  README.md  shared_string.bs  shared_string.html
include/: shared_string.hpp
test/: CMakeLists.txt
test/src/: shared_string.cpp
